--- a/res/layout-land/fragment_crime.xml
+++ b/res/layout-land/fragment_crime.xml
@@ -4,10 +4,39 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp"
+    >
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_marginRight="4dp">
+            <ImageButton
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/crime_imageButton" android:src="@android:drawable/ic_menu_camera"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:layout_weight="1">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Text"
+                    android:id="@+id/textView2"/>
+            <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editText2"/>
+        </LinearLayout>
+    </LinearLayout>
     <TextView android:layout_width="match_parent"
               android:layout_height="wrap_content"
-            android:text="@string/crime_title_label"
-            style="?android:listSeparatorTextViewStyle"
+              android:text="@string/crime_title_label"
+              style="?android:listSeparatorTextViewStyle"
             />
 
     <EditText android:id="@+id/crime_title"
